--- a/style.css
+++ b/style.css
@@ -36,10 +36,10 @@ body {
 }
 
 .fa-quote-left {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 .fa-quote-right {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .quote-author {
@@ -84,11 +84,27 @@ button:active {
 .fa-twitter {
   font-size: 1.5rem;
 }
+
+.loader {
+  border: 16px solid #f3f3f3; 
+  border-top: 16px solid #333333;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 /* Media Query: Tablet or Smaller */
 
 @media screen and (max-width: 1000px) {
   .quote-container {
-    margin: auto 10px;
+    margin: auto 20px;
   }
   .quote-text {
     font-size: 2rem;
